--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "formik": "^2.2.6",
     "json-server": "^0.16.3",
     "moment": "^2.29.1",
-    "node-html-to-image": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-github-btn": "^1.2.0",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "yup": "^0.32.9"
