--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-simple-img": "^2.3.9",
     "redux": "^4.1.0",
     "swr": "^0.5.6",
     "yup": "^0.32.9"
